this is terminal

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </button>
     </main>
     <div>
-      Hello world
+      Hello world on the terminal branch
     </div>
   </body>
   <script src="index.js"></script>
